# code-blogs-articles

./: .gitignore  00-quick-explore.ipynb  17-greedy-vs-beam.ipynb  README.md  _00-quick-work-check.ipynb  _01-installation-etc.ipynb  ada-boost-method.ipynb  adaboost.ipynb  bias-varaince-tradeoff.ipynb  confusion-matrix.ipynb  cosine-similarity.ipynb  cross-entropy-loss.ipynb  decision-trees.ipynb  feature-discretization.ipynb  hyperparameters-tuning.ipynb  linear-regression.ipynb  main.py  matrix-factorization.ipynb  pca-dimensionality-reduction.ipynb  pyproject.toml  python-tips-interview.ipynb  random-forest.ipynb  regression-eval-metrics.ipynb  regularization-techniques.ipynb  tfidf-vectorizer.ipynb  train-valid-test.md
01-code-nb-scripts/: 00-python-quicks.ipynb  00-quick-work-check.ipynb  01-installation-etc.ipynb  01A-intro-tensors.ipynb  02A-simple-nn.ipynb  03-impl-self-attn.ipynb  05A-context-embeddings.ipynb  07A-supervised-ft.ipynb  11-vectors-matrices.ipynb  12-tokenizer-embeddings.ipynb  12-tokenizers.ipynb  12A-embeddings.ipynb  12A-tokenizers-embeddings.ipynb  13-python-itemgetter.ipynb  15-next-token-prob.ipynb  15X-pretraining-finetuning.ipynb  16-pretraining-finetuning.ipynb  17-greedy-vs-beam.ipynb  18-reranking-context.ipynb  18X-cot_demo-1.ipynb  19-pydantic-basics.ipynb  20-llm-struc-resp.ipynb  21-llms-alignments.ipynb  21A-bradley-terry.ipynb  _00-quick-work-check.ipynb
01-code-notebook-files/: 00-quick-work-check.ipynb  02-understand-nn.ipynb  02A-simple-nn.ipynb  03-impl-self-attn.ipynb  07B-understanding-lora.ipynb  09-softmax-improved.ipynb  10-numpy-tips.ipynb  s05e07-introverts-extroverts.ipynb
02-coding-puzzles-qs/: 00-practice-over-qs.ipynb
02-machine-learning/: 04-mlops-data-pipe.ipynb
03-deep-learning/: 01-intro-tensors.ipynb  02-understand-nn.ipynb
Bagging article/: Bagging in Random Forest.ipynb
_model/: iris_model.pkl
deep-learning/: creating-tensors-pytorch-colab.ipynb  (+1 more)
(+88 files in other folders)
