[project]
name = "code-blogs-articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "seaborn>=0.13.2",
    "tiktoken==0.9.0",
    "torch>=2.7.0",
    "transformers>=4.53.2",
    "xgboost>=3.0.2",
]
