[project]
name = "code-blogs-articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "lamini>=3.4.6",
    "lightgbm>=4.6.0",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "optuna>=4.4.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tiktoken==0.9.0",
    "torch>=2.7.0",
    "transformers>=4.53.2",
    "trl>=0.20.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
