[project]
name = "code-blogs-articles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bert-score==0.3.13",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "dvc>=3.62.0",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "lamini>=3.4.6",
    "lightgbm>=4.6.0",
    "litellm==1.81.13",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "nltk==3.9.1",
    "optuna>=4.4.0",
    "reasoning-from-scratch>=0.1.19",
    "redis>=7.4.0",
    "rouge-score==0.1.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tiktoken==0.9.0",
    "torch==2.10.0",
    "transformers==5.0.0",
    "trl>=0.20.0",
    "umap-learn>=0.5.11",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
[tool.uv]
override-dependencies = [
    "umap ; python_version < '0'",
]
